# Confluence_DisableUsers

./: .gitignore  Cargo.toml  LICENSE  settings.example.toml  users.example.txt
src/: config.rs  confluence.rs  main.rs
