[package]
name = "disableusers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio-postgres = "0.7.7"